--- a/pet-clinic-web/src/main/resources/templates/owners/owners.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/owners.html
@@ -7,6 +7,22 @@
 <body>
 <div>
     <h1 th:text="'List of Owners'">List of owners...</h1>
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="owner : ${owners}">
+            <td th:text="${owner.id}">1</td>
+            <td th:text="${owner.firstName}">Ezequiel</td>
+            <td th:text="${owner.lastName}">Gavilán</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
