--- a/pet-clinic-web/src/main/resources/templates/vets/vets.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/vets.html
@@ -7,6 +7,23 @@
 <body>
 <div>
     <h1 th:text="'List of Vets'">List of vets...</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="vet : ${vets}">
+            <td th:text="${vet.id}">1</td>
+            <td th:text="${vet.firstName}">Rocio</td>
+            <td th:text="${vet.lastName}">Paris</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
