Adding layout to index page. Closes #20.

--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div>
-    <h1 th:text="#{welcome}">Welcome</h1>
+    <h1 th:text="#{welcome}">Welcome!</h1>
 
     <div class="row">
         <div class="col-md-12">
